- Remote module/source indicators and external runner signals are counted with structured counters in adapter summary output.
- CI/CD path hints and adapter discovery now explicitly include `.gitlab-ci.yaml` and `azure-pipelines*.yaml` alongside existing `.yml` patterns.
- IaC adapter discovery now explicitly includes `.template` to match implemented adapter routing coverage.
- Explicit `cicd` route now requires CI structure/signals (not filename/path hints alone), failing closed on path-hint-only placeholders.
- Adapter `auto` classification now treats CI structure/action references as CI evidence, so valid pinned workflows classify as `cicd` instead of falling back to `iac`.
- Explicit `iac` route now requires IaC structural signals; CI-style workflow content with generic secret terms no longer passes strict IaC routing.
- Explicit `iac` and `cicd` routes now require non-ambiguous entry-path sets, preventing duplicate or case-colliding directory paths from passing strict route analysis.
- Container adapter extraction deepened:
- OCI layout counts now include manifest and blob counts.
- Container tarball detection now recognizes Docker-style markers (`manifest.json` + `repositories`) and OCI tar markers (`oci-layout` + `index.json` + `blobs/sha256/*`) for local tar inputs.
- Explicit OCI layout route now fails closed when manifests exist but blob evidence is missing (`CONTAINER_LAYOUT_INVALID`), preventing partial container identity acceptance.
- Explicit OCI layout route now requires manifest digest references to resolve to blob entries, preventing unrelated blob padding from satisfying strict OCI layout evidence.
- Explicit OCI layout route now requires digest references for every manifest entry when manifests are present, preventing partial/digestless OCI manifest shells from passing strict layout routing.